[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/menu/settings/option_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/menu/SettingsMenu.gd" type="Script" id=6]
[ext_resource path="res://scenes/menu/WindowModeButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/menu/WindowResolutionButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://resources/menu/button_groups/buttongroup_menubar.tres" type="ButtonGroup" id=9]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )

[node name="MainPane" type="Control" parent="."]
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Menubar" type="Panel" parent="MainPane"]
anchor_right = 1.0
anchor_bottom = 0.043

[node name="HBoxContainer" type="HBoxContainer" parent="MainPane/Menubar"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 40
alignment = 1

[node name="GraphicsButton" type="Button" parent="MainPane/Menubar/HBoxContainer"]
margin_left = 352.0
margin_right = 429.0
margin_bottom = 27.0
toggle_mode = true
pressed = true
group = ExtResource( 9 )
text = "GRAPHICS"

[node name="SoundButton" type="Button" parent="MainPane/Menubar/HBoxContainer"]
margin_left = 469.0
margin_right = 529.0
margin_bottom = 27.0
toggle_mode = true
group = ExtResource( 9 )
text = "SOUND"

[node name="NetworkButton" type="Button" parent="MainPane/Menubar/HBoxContainer"]
margin_left = 569.0
margin_right = 645.0
margin_bottom = 27.0
toggle_mode = true
group = ExtResource( 9 )
text = "NETWORK"

[node name="KeybindsButton" type="Button" parent="MainPane/Menubar/HBoxContainer"]
margin_left = 685.0
margin_right = 785.0
margin_bottom = 27.0
toggle_mode = true
group = ExtResource( 9 )
text = "KEYBINDINGS"

[node name="AccessibilityButton" type="Button" parent="MainPane/Menubar/HBoxContainer"]
margin_left = 825.0
margin_right = 928.0
margin_bottom = 27.0
toggle_mode = true
group = ExtResource( 9 )
text = "ACCESSIBILITY"

[node name="GraphicsTab" type="Control" parent="MainPane"]
anchor_top = 0.15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TabOptions" type="VBoxContainer" parent="MainPane/GraphicsTab"]
anchor_left = 0.1
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/separation = 10

[node name="WindowModeButton" parent="MainPane/GraphicsTab/TabOptions" instance=ExtResource( 7 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1152.0
margin_bottom = 26.0
size_flags_horizontal = 3

[node name="WindowResolutionButton" parent="MainPane/GraphicsTab/TabOptions" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 36.0
margin_right = 1152.0
margin_bottom = 62.0
size_flags_horizontal = 3

[node name="SoundTab" type="Control" parent="MainPane"]
visible = false
anchor_top = 0.13
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NetworkTab" type="Control" parent="MainPane"]
visible = false
anchor_top = 0.13
anchor_right = 1.0
anchor_bottom = 1.0

[node name="KeybindsTab" type="Control" parent="MainPane"]
visible = false
anchor_top = 0.13
anchor_right = 1.0
anchor_bottom = 1.0

[node name="AccessibilityTab" type="Control" parent="MainPane"]
visible = false
anchor_top = 0.13
anchor_right = 1.0
anchor_bottom = 1.0

[connection signal="toggled" from="MainPane/Menubar/HBoxContainer/GraphicsButton" to="." method="_on_GraphicsButton_toggled"]
[connection signal="toggled" from="MainPane/Menubar/HBoxContainer/SoundButton" to="." method="_on_SoundButton_toggled"]
[connection signal="toggled" from="MainPane/Menubar/HBoxContainer/NetworkButton" to="." method="_on_NetworkButton_toggled"]
[connection signal="toggled" from="MainPane/Menubar/HBoxContainer/KeybindsButton" to="." method="_on_KeybindsButton_toggled"]
[connection signal="toggled" from="MainPane/Menubar/HBoxContainer/AccessibilityButton" to="." method="_on_AccessibilityButton_toggled"]
